# NonPhotorealisticRenderingOfHRBFS

./: .gitignore  CMakeLists.txt  README.md  hrbf.cpp  hrbf.hpp  main.cpp  modelreader.cpp  modelreader.hpp  shader.cpp  shader.hpp
cmake/: glew.cmake  libigl.cmake
shader/: geo-pass.fs.glsl  geo-pass.vs.glsl  horizonbasedssao-shader.fs.glsl  light-pass.fs.glsl  light-pass.vs.glsl  oren-nayar.fs.glsl  oren-nayar.vs.glsl  single-pass-wireframe.fs.glsl  single-pass-wireframe.gs.glsl  single-pass-wireframe.vs.glsl  ssao-shader.fs.glsl
